@@ -55,10 +55,7 @@ public class ParentIT extends AbstractParentChildTestCase {
         long categoriesWithComments = categoryToControl.values().stream().filter(control -> control.commentIds.isEmpty() == false).count();
         assertThat(
             "Buckets: "
-                + categoryTerms.getBuckets()
-                    .stream()
-                    .map((Function<Terms.Bucket, String>) MultiBucketsAggregation.Bucket::getKeyAsString)
-                    .collect(Collectors.toList())
+                + categoryTerms.getBuckets().stream().map(MultiBucketsAggregation.Bucket::getKeyAsString).toList()
                 + "\nCategories: "
                 + categoryToControl.keySet(),
             (long) categoryTerms.getBuckets().size(),
@@ -140,7 +137,7 @@ public class ParentIT extends AbstractParentChildTestCase {
                 .stream()
                 .filter(entry -> entry.getValue().commenterToCommentId.containsKey(commenterBucket.getKeyAsString()))
                 .map(Map.Entry::getKey)
-                .collect(Collectors.toList());
+                .toList();
 
             for (String category : categories) {
                 Terms.Bucket categoryBucket = categoryAgg.getBucketByKey(category);
@@ -237,7 +234,7 @@ public class ParentIT extends AbstractParentChildTestCase {
                 .stream()
                 .filter(entry -> entry.getValue().commenterToCommentId.containsKey(commenterBucket.getKeyAsString()))
                 .map(Map.Entry::getKey)
-                .collect(Collectors.toList());
+                .toList();
 
             for (String category : categories) {
                 Terms.Bucket categoryBucket = categoryAgg.getBucketByKey(category);
